<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MenuFragment">

    <Button
        android:id="@+id/nytSpil"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F49F0A"
        android:text="@string/nyt_spil"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/highScore"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F49F0A"
        android:text="@string/high_score"
        android:layout_below="@+id/nytSpil"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/indstillinger"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F49F0A"
        android:text="@string/indstillinger_text"
        android:layout_below="@+id/highScore"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/hjælp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="#F49F0A"
        android:text="Hjælp"
        android:layout_below="@+id/indstillinger"
        android:layout_marginTop="10dp" />

</RelativeLayout>