<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".TaberFragment">

    <TextView
        android:id="@+id/tabtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="165dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/du_har_tabt"
        android:textColor="#EFCA08"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/rigtigtOrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rigtigt ord"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="223dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dinScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:text="score"
        android:textSize="20sp" />

    <Button
        android:id="@+id/prøvIgen"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:text="@string/prov_igen"
        android:background="@drawable/buttonshapecolor" />

    <Button
        android:id="@+id/tilStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_gravity="center"
        android:text="@string/tilbage_til_start"
        android:background="@drawable/buttonshapecolor" />

</FrameLayout>